RESOLVED FIXED 245109
[LFC][IFC] InlineFormattingGeometry::floatConstraintsForLine should not always flip for right-to-left direction
https://bugs.webkit.org/show_bug.cgi?id=245109
Summary [LFC][IFC] InlineFormattingGeometry::floatConstraintsForLine should not alway...
zalan
Reported 2022-09-12 19:26:35 PDT
only when the floating context is in left to right mode.
Attachments
Patch (5.25 KB, patch)
2022-09-12 19:35 PDT, zalan
no flags
Patch (6.12 KB, patch)
2022-09-12 19:37 PDT, zalan
no flags
[fast-cq]Patch (6.12 KB, patch)
2022-09-13 06:30 PDT, zalan
no flags
Patch (1.19 KB, patch)
2022-09-13 18:21 PDT, zalan
no flags
zalan
Comment 1 2022-09-12 19:35:40 PDT
zalan
Comment 2 2022-09-12 19:37:32 PDT
Antti Koivisto
Comment 3 2022-09-13 06:11:39 PDT
Comment on attachment 462301 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=462301&action=review > COMMIT_MESSAGE:14 > +while this does not need on: one
zalan
Comment 4 2022-09-13 06:30:02 PDT
Created attachment 462316 [details] [fast-cq]Patch
EWS
Comment 5 2022-09-13 06:44:36 PDT
Committed 254435@main (52561bcb85e3): <https://commits.webkit.org/254435@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 462316 [details].
Radar WebKit Bug Importer
Comment 6 2022-09-13 06:45:21 PDT
zalan
Comment 7 2022-09-13 18:21:45 PDT
Reopening to attach new patch.
zalan
Comment 8 2022-09-13 18:21:47 PDT
EWS
Comment 9 2022-09-14 06:06:11 PDT
Committed 254474@main (2369ed44a124): <https://commits.webkit.org/254474@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 462325 [details].
Note You need to log in before you can comment on or make changes to this bug.